# Volume-Renderer

./: CMakeLists.txt  CopyIfDifferent.txt  README.md  Report 2.txt  Report.txt  opencl_sources.txt
CMake/: FindOpenVR.cmake
Dependencies/CLFW/include/: clfw.hpp
Dependencies/CLFW/src/: clfw.cpp
Sources/: CMakeLists.txt
Sources/BigUnsigned/: BigNum.h_  CMakeLists.txt  LCP.h  TestBig.cpp
Sources/BinaryRadixTree/: BrtNode.h_  BuildBRT.cl  BuildBRT.h_  BuildBRT.hpp_  CMakeLists.txt
Sources/Boolean/: CMakeLists.txt  bool.h
Sources/BoundingBox/: BoundingBox.h  CMakeLists.txt
Sources/CellResolution/: CMakeLists.txt  Conflict.h  ConflictCellDetection.cl  ConflictCellDetection.cpp  ConflictCellDetection.h  ConflictCellDetection.hpp  ConflictCellResolution.cl  ConflictCellResolution.hpp
Sources/Color/: Color.h
Sources/Dimension/: CMakeLists.txt  dim.h
Sources/Entities/: CMakeLists.txt  Entity.h  Scene.cpp  Scene.h  Transform.h
Sources/Entities/Box/: Box.cpp  Box.hpp  CMakeLists.txt
Sources/Entities/Boxes/: Boxes.cl  Boxes.cpp  Boxes.hpp  CMakeLists.txt
Sources/Entities/Cameras/: CMakeLists.txt  OrbitCamera.cpp  OrbitCamera.h  OrthoCamera.cpp  OrthoCamera.h
Sources/Entities/GUI/: Button.cpp  Button.hpp  CMakeLists.txt  Canvas.cpp  Canvas.hpp
Sources/Entities/GUI/2DEditor/: 2DEditor.cpp  2DEditor.hpp  CMakeLists.txt  CircleWidget.cpp  CircleWidget.hpp
Sources/Entities/GUI/2D_Desktop_TransferFunction/: CMakeLists.txt  TransferFunctionGUI.cpp  TransferFunctionGUI.hpp
Sources/Entities/GUI/CurveEditor/: CMakeLists.txt  CurveEditor.cpp  CurveEditor.hpp
Sources/Entities/ImagePlane/: CMakeLists.txt  ImagePlane.cl  ImagePlane.cpp  ImagePlane.h  ImagePlane.hpp
Sources/Entities/Polylines/: CMakeLists.txt  Polylines.cl  Polylines.cpp  Polylines.hpp
Sources/Entities/RaycastVolume/: RaycastVolume.cpp  RaycastVolume.h  RaycastVolume.hpp
Sources/Entities/SlicedVolume/: SlicedVolume.cpp  SlicedVolume.hpp
Sources/Events/: CollisionDetectionEvents.cpp  CollisionDetectionEvents.h  OctreeVREvents.cpp  OctreeVREvents.h  QuadtreeEvents.cpp  SBVREvents.cpp  SBVREvents.h  mouse.h  vr.h
Sources/GLUtilities/: CMakeLists.txt  Entity.h  OrbitCamera.cpp  OrbitCamera.h  PerspectiveCamera.cpp  Polygons.cpp  Polygons.h  Sketcher.cpp  Sketcher.h  gl_utils.cpp  gl_utils.h  texture.hpp
Sources/GLUtilities/Boxes/: Boxes.cl  Boxes.cpp  Boxes.h  Boxes.hpp
Sources/GLUtilities/ImagePlane/: ImagePlane.cl  ImagePlane.cpp  ImagePlane.hpp
Sources/GLUtilities/Polylines/: Polylines.cpp  Polylines.hpp
Sources/GLUtilities/SlicedVolume/: SlicedVolume.cpp  SlicedVolume.h  SlicedVolume.hpp
Sources/GlobalData/: CMakeLists.txt  data.cpp  data.h_
Sources/Line/: CMakeLists.txt  Line.h
Sources/Main/: CollisionDetectionMain.cpp  OctreeVRMain.cpp  QuadtreeMain.cpp  RCVRMain.cpp  SBVRMain.cpp
Sources/Octree/: BuildOctree.cl  BuildOctree.cpp  BuildOctree.h  BuildOctree.hpp  CMakeLists.txt  Octnode.h  Octree.cl  Octree.cpp  Octree.hpp  Quadnode.h  Quadtree.cpp  Quadtree.hpp_  Shared.h
Sources/OctreeDefinitions/: CMakeLists.txt  defs.h_
Sources/OctreeResolution/: CMakeLists.txt  Resln.h
Sources/OpenCL/: CMakeLists.txt  opencl_sources.txt
Sources/OpenGL/: CMakeLists.txt
Sources/OpenGL/Shaders/: NonShaded2VBO.vert  plane.frag  plane.vert  raycastVol.frag  raycastVol.vert  slicedVol.frag  slicedVol.vert  uniformColor.vert
Sources/Options/: Options.cpp  Options.h
Sources/ParallelAlgorithms/: CMakeLists.txt  ParallelAlgorithms.h  ParallelAlgorithms.hpp  defs.h
Sources/ParallelAlgorithms/Compaction/: CMakeLists.txt  Compaction.cl  Compaction.h  Compaction.hpp
Sources/ParallelAlgorithms/Matrix/: CMakeLists.txt  Matrix.cl  Matrix.hpp
Sources/ParallelAlgorithms/Predication/: CMakeLists.txt  Predication.cl  Predication.h  Predication.hpp
Sources/ParallelAlgorithms/RadixSort/: CMakeLists.txt  RadixSort.cl  RadixSort.h  RadixSort.hpp
Sources/ParallelAlgorithms/Reduction/: CMakeLists.txt  Reduction.cl  Reduction.hpp
Sources/ParallelAlgorithms/Scan/: CMakeLists.txt  Scan.cl  Scan.hpp
Sources/Quantize/: CMakeLists.txt  Quantize.cl  Quantize.h  Quantize.hpp
Sources/Shaders/: Shaders.cpp  Shaders.hpp
Sources/Shaders/Programs/: ShaderProgram.cpp  ShaderProgram.hpp
Sources/Tests/: BenchmarkMain.cpp  CMakeLists.txt  HelperFunctions.hpp  catchmain.cpp
Sources/Tests/Benchmarks/: CMakeLists.txt  MazeBenchmarks.cpp  ScalabilityBenchmarks.cpp
Sources/Tests/UnitTests/: BinaryRadixTreeTests.cpp  CMakeLists.txt  CompactionTests.cpp  ConflictCellDetectionTests.cpp  ConflictCellResolutionTests.cpp  OctreeTests.cpp  PredicationTests.cpp  QuantizeTests.cpp  ReductionTests.cpp  ScanTests.cpp  SortTests.cpp  ZOrderTests.cpp
Sources/Timer/: CMakeLists.txt
Sources/UNSORTED/: CMakeLists.txt
Sources/Vector/: CMakeLists.txt  vec.h  vec_cl.h  vec_cpp.h
Sources/ZOrder/: CMakeLists.txt  ZOrder.cl  ZOrder.hpp  z_order.h
